--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container-fluid">
+  <div class="cover logo"></div>
+  <app-search-bar></app-search-bar>
+</div>
