--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,3 +1,4 @@
-<p>
-  search-bar works!
-</p>
+<div class="input-field">
+  <input id="search" type="text" class="validate" (keyup)="changeHandler(search)" #search>
+  <label for="search">Search</label>
+</div>
