--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 @import 'shared/shared.css';
 
 .logo{
-	width: 64px;
-	height: 64px;
-	background-image: url('../resources/img/angular.png');
+	width: 188px;
+	height: 82.666px;
+	background-image: url('../resources/img/logo.png');
 	margin: 20px auto;
 }
