--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,11 @@
     </div>
   </div>
   <div class="row">
-    <div class="col s12 m7">
-      <app-video-detail></app-video-detail>
+    <div class="col s12 m12 l7">
+      <app-video-detail [video]="data.selectedVideo"></app-video-detail>
     </div>
-    <div class="col s12 m5">
-      <app-video-list [videos]="data.videos"></app-video-list>
+    <div class="col s12 m12 l5">
+      <app-video-list [videos]="data.videos" (selectedVideo)="selectedVideo($event)"></app-video-list>
     </div>
   </div>
 </div>
