--- a/src/app/components/video-list/video-list.component.css
+++ b/src/app/components/video-list/video-list.component.css
@@ -1,3 +1,11 @@
+.app-card{
+	&:first-child{
+		@media screen and (min-width: 992px) {
+			margin-top: 0;
+		}	
+	}
+}
+
 .description{
 	font-size: 0.9rem;
 }
