reactive form added

--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
 <div class="input-field">
-  <input id="search" type="text" class="validate" (keyup)="changeHandler(search)" #search>
+  <input id="search" type="text" class="validate" [ngFormControl]="term">
   <label for="search">Search</label>
 </div>
